force-app/main/default/objects/HandsMen_Product__c/fields/HandsMen_Order__c.field-meta.xml
<CustomField>
    <fullName>HandsMen_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HandsMen Order</label>
    <referenceTo>HandsMen_Order__c</referenceTo>
    <relationshipLabel>HandsMen Products (HandsMen Order)</relationshipLabel>
    <relationshipName>HandsMen_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>