force-app/main/default/objects/HandsMen_Product__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>Stores product catalog</description>
    <label>SKU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>